--- a/web/src/pages/Login/styles.css
+++ b/web/src/pages/Login/styles.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
     justify-content: center;
     align-items: center;
 }
@@ -30,3 +31,15 @@
 #loginPage .btn:hover {
     background: #153B50;
 }
+
+#loginPage .spin {
+    animation: spin 2s infinite linear;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(359deg);
+    }
+  }
