--- a/web/src/assets/styles/button.css
+++ b/web/src/assets/styles/button.css
@@ -5,4 +5,27 @@
     cursor: pointer;
     font-size: 1rem;
     outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background 0.2s;
 }
+
+.btn svg {
+	display: block;
+	margin-right: .3rem;
+	width: 1.15rem;
+	height: 1.15rem;
+}
+
+.spin {
+    animation: spin 2s infinite linear;
+  }
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(359deg);
+    }
+  }
