--- a/web/src/pages/NewSpent/styles.css
+++ b/web/src/pages/NewSpent/styles.css
@@ -20,6 +20,10 @@
     justify-content: space-between;
 }
 
+#newSpentPage .inputBlock {
+    margin-top: .5rem;
+}
+
 #newSpentPage form > div:nth-child(2) {
     margin-left: 2rem;
 }
