--- a/web/src/pages/Payers/styles.css
+++ b/web/src/pages/Payers/styles.css
@@ -39,6 +39,21 @@
     text-align: start;
 }
 
-#payersPage td:nth-child(2), #payersPage th:nth-child(2) {
+#payersPage td:nth-child(2), #payersPage td:nth-child(3), #payersPage th:nth-child(2) {
     text-align: end;
+}
+
+#payersPage td button.del {
+    border: none;
+    background: darkred;
+    color: white;
+    padding: .5rem;
+    border-radius: .5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    outline: none;
+}
+
+#payersPage td button.del:hover {
+    background: rgb(97, 0, 0);
 }
